# training_algos_2016_05

./: .gitignore  Test.cpp  Test.vcxproj  algos_2016_05.sublime-project
akozoriz/: CMakeLists.txt  main.cc
akozoriz/components/: CMakeLists.txt
akozoriz/components/include/: search.h  sort.h
akozoriz/components/src/: search.cc  sort.cc
akozoriz/test/: CMakeLists.txt
akozoriz/test/include/: helpers.h  macro.h
akozoriz/test/src/: helpers.cc  macro.cc
ddolzhenko/: bilist.cpp  bst.py  hash_map.cpp  ltest.cpp  ltest_main.hpp  naive_sorting.cpp  sorted_vector.cpp  test_ltest.cpp  test_of_test.cpp  trees.cpp  trees.py
hromanov/: main.cpp
